kubernetes/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
